--- a/css/index.css
+++ b/css/index.css
@@ -652,6 +652,10 @@ input::placeholder, textarea::placeholder {
     font-family: Rubik, sans-serif;
 }
 
+textarea {
+    resize: none;
+  }
+
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
     appearance: none;
     margin: 0px;
