--- a/css/jqery style.css
+++ b/css/jqery style.css
@@ -1,6 +1,7 @@
+/*  
 body{
     margin:0;
-    /* background-color:#aa9f9f; */
+    /* background-color:#aa9f9f; 
 }
 
 .myTabs{
@@ -63,3 +64,5 @@ body{
 .myTabs .tabsContent .tabContent.active{
     display: block;
 }
+
+*/
